# hius

./: .coveragerc  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  sitemap.xml
docs/: index.md
docs/ru/: app.md  endpoint.md  introduction.md  middleware.md  request.md  response.md  routing.md  static.md
hius/: __init__.py  app.py  httpcodes.py
hius/handlers/: __init__.py  exceptions.py
hius/openapi/: __init__.py  config.py  middleware.py  models.py  template.py
hius/routing/: __init__.py  endpoint.py  exceptions.py  lifespan.py  parser.py  router.py  routes.py  utils.py
liteapi/: __init__.py  app.py  types.py  utils.py
liteapi/handlers/: staticfiles.py
liteapi/routing/: __init__.py  endpoint.py  exceptions.py  lifespan.py  parser.py  router.py  routes.py  utils.py
ru/app/: index.html
ru/endpoint/: index.html
ru/introduction/: index.html
ru/middleware/: index.html
ru/request/: index.html
ru/response/: index.html
ru/routing/: index.html
ru/static/: index.html
search/: search_index.json
tests/: test_app.py  test_endpoint.py  test_lifespan.py  test_routing.py
