[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'hius'
version = '0.3.0'
description = 'Minimalistic ASGI web framework'
readme = 'README.md'
license = 'MIT'
requires-python = '>=3.7'
authors = [
    { name = 'Nikita Ryabinin', email = 'ryabinin.ne@gmail.com' },
]
keywords = [
    'api',
    'asgi',
    'http',
    'websocket',
    'pydantic',
    'starlette',
    'hius',
    'framework'
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Framework :: AsyncIO',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Internet :: WWW/HTTP :: HTTP Servers',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]
dependencies = [
    'starlette ==0.21.0',
    'pydantic ==1.10.2',
    'pydantic-openapi-schema ==1.3.0'
]

[project.urls]
Homepage = 'https://github.com/WoolenSweater/hius'
Documentation = 'https://woolensweater.github.io/hius/'
Changelog = 'https://github.com/WoolenSweater/hius/blob/main/CHANGELOG.md'

[project.optional-dependencies]
test = [
    'httpx ==0.23.0',
    'pytest ==7.2.0',
    'pytest-cov ==4.0.0',
    'python-multipart ==0.0.5'
]
doc = [
    'mkdocs ==1.4.2',
    'mkdocs-material ==8.5.10'
]
uvicorn = [
    'uvicorn[standard] ==0.19.0'
]
multipart = [
    'python-multipart ==0.0.5'
]

[tool.pytest.ini_options]
testpaths = 'tests'
addopts = [
    '--capture=no',
    '--verbose',
    '--tb=short',
    '--cov',
    '--cov-report=term-missing'
]

[tool.coverage.run]
omit = [
    '.venv/*',
    'venv/*',
    '.env/*',
    'env/*',
    'tests/*'
]
